<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="menu_home">Home</string>
  <string name="menu_daily">Daily Forecast</string>
  <string name="menu_about">About</string>
  <string name="menu_settings">Settings</string>
  <string name="home_description_title">Description</string>
  <string name="home_clouds_title">Clouds</string>
  <string name="home_humidity_title">Humidity</string>
  <string name="home_pressure_title">Pressure</string>
  <string name="home_wind_speed_title">Wind Speed</string>
  <string name="home_feels_like_title">Feels like</string>
  <string name="home_title_hello">Hello Weather App</string>
  <string name="daily_title_hello">Hello Weather App</string>
  <string name="about_app_header">         Weather-App     </string>
  <string name="about_app_text">         Weather-App is a simple tool to help you find out what\'s the weather like in your desired location     </string>
  <string name="about_features_header">         Weather-App     </string>
  <string name="about_features_text_first">         Get a detailed report of the weather in your current location or get a daily temperature report by time and date     </string>
  <string name="about_features_text_second">         Displayed information is based on the location (city based) you provide     </string>
  <string name="about_display_header">         Display     </string>
  <string name="about_display_text">         A simple UI designed to give you the most important information in the easiest way     </string>
  <string name="settings_location_title">Location</string>
  <string name="settings_measurement_title">Measurement Units</string>
  <string name="settings_metric_radio">Metric</string>
  <string name="settings_imperial_radio">Imperial</string>
  <string name="settings_language_title">App language</string>
  <string name="settings_days_title">Number of displayed days</string>
  <string name="settings_save_changes_btn">Save Changes</string>
  <string name="description_clear_sky">Clear sky </string>
  <string name="days_sunday">Sunday</string>
  <string name="days_monday">Monday</string>
  <string name="settings_default_location">New York</string>
</resources>