<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.applanga.weathersample.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_daily"
        android:name="com.applanga.weathersample.fragments.DailyFragment"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.applanga.weathersample.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.applanga.weathersample.fragments.SettingsFragment"
        android:label="@string/fragment_settings_title"
        tools:layout="@layout/fragment_settings" />

</navigation>