<?xml version="1.0" encoding="utf-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:exported="false"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/menu_about"
                android:src="@drawable/ic_logo"
                tools:srcCompat="@drawable/sun_cloud_round" />

            <TextView
                android:id="@+id/about_app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_app_header"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="Weather-App" />

            <TextView
                android:id="@+id/about_app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_app_text"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:importantForAccessibility="no"
                android:src="@drawable/city" />

            <TextView
                android:id="@+id/about_features_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_features_header"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="Features" />

            <TextView
                android:id="@+id/about_features_text_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_features_text_first"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_features_text_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_features_text_second"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:importantForAccessibility="no"
                android:src="@drawable/calendar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/about_display_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_display_header"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="Display" />

            <TextView
                android:id="@+id/about_display_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_display_text"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:importantForAccessibility="no"
                android:src="@drawable/settings" />

            <TextView
                android:id="@+id/about_customize_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_customize_header"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_customize_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_customize_text"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout><!--</layout>-->
