<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:exported="false">

    <data>
        <import type="com.applanga.weathersample.utils.FragmentBindingAdapter"/>
        <import type="com.applanga.weathersample.R"/>
        <variable
            name="homeWeather"
            type="com.applanga.weathersample.networking.modules.current.ApiResponseCurrent" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_gradient"
        android:paddingTop="16dp"
        tools:context=".fragments.HomeFragment">

                        <com.google.android.material.imageview.ShapeableImageView
                            tools:visibility="visible"
                            android:id="@+id/home_progress_bar_background"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:translationZ="10dp" />

                        <ProgressBar
                            tools:visibility="visible"
                            android:id="@+id/home_progress_bar_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:duration="10"
                            android:padding="100dp"
                            android:translationZ="10dp" />
        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/home_title_hello"
            android:fontFamily="@font/roboto_medium"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAlignment="center"
            android:padding="8dp"
            >
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title">

            <ImageView
                android:id="@+id/home_location_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/settings_location_title"
                app:srcCompat="@drawable/ic_location_white"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/home_location"
                style="@style/home_data"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:text="@{homeWeather.name + `, ` + homeWeather.sys.country + ` `}"
                android:textAlignment="center"
                android:textSize="24sp"
                tools:text="location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_date0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/home_date1"
                style="@style/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:text="Thursday, " />
            <TextView
                android:id="@+id/home_date2"
                style="@style/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:text="May " />
            <TextView
                android:id="@+id/home_date3"
                style="@style/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                tools:text="27" />
        </LinearLayout>


        <TextView
            android:id="@+id/home_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="88sp"
            android:textStyle="bold"
            app:doubleToInt="@{homeWeather.main.temp}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_date0"
            tools:text="Deg" />

        <ImageView
            android:id="@+id/home_weather_icon"
            android:layout_width="156dp"
            android:layout_height="158dp"
            android:contentDescription="TODO"
            android:paddingLeft="@dimen/spacing_md"
            android:paddingRight="@dimen/spacing_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_temperature"
            tools:src="@drawable/ic__11n" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_weather_icon">

            <!-- description -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_description_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_description_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_description_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:getDescriptionString="@{homeWeather.weather[0].icon}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- feels like -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_feels_like_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_feels_like_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_feels_like_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:doubleToInt="@{homeWeather.main.feels_like}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- clouds -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_clouds_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_clouds_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_clouds_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{homeWeather.clouds.all  + `%` + ` `}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- humidity -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_humidity_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_humidity_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_humidity_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{homeWeather.main.humidity + `%` + ` `}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- pressure -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_pressure_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_pressure_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_pressure_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{homeWeather.main.pressure + ` hPa` + ` `}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- wind speed -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:background="@color/primary_light"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/home_wind_speed_title"
                    style="@style/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_wind_speed_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <TextView
                    android:id="@+id/home_wind_speed_data"
                    style="@style/home_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{homeWeather.wind.speed + ` km/h` + ` `}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="data" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
